fix: force compact attribution if overlapping scale bar

--- a/src/Map.css
+++ b/src/Map.css
@@ -42,11 +42,3 @@
 .maplibregl-popup-close-button:focus {
     outline: none;
 }
-
-.maplibregl-ctrl-attrib.maplibregl-compact {
-    min-height: 24px;
-}
-
-.maplibregl-ctrl-attrib-button:focus {
-    box-shadow: none;
-}
